Bugfix/#192 task ui issues (#209)
* added all 3 features from the issue

* separated some functions

* fixed broken filtering

* fixed FAB overlapping with footer

--- a/frontend/src/app/task/task.component.scss
+++ b/frontend/src/app/task/task.component.scss
@@ -1,7 +1,7 @@
 @import '../../sass/color-variables';
 
 .task-detail-row {
-    margin-bottom: 0;
+    margin-bottom: 20px;
 }
 
 md-input-container#task-search {
@@ -41,7 +41,7 @@ md-icon.filter-toggler {
 
 button[md-fab] {
     position: absolute;
-    bottom: 23px;
+    bottom: 53px;
     right: 23px;
     color: $primary-light;
 }
